--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="./fine-swiper.min.js"></script>
   <script>
     window.onload = function () {
-      const { createTouch, createSlide } = FineTouch;
+      const { createTouch } = FineTouch;
     };
   </script>
 </html>
